# EE405A

./: README.md
Week1/: README.md
Week2/: README.md  [EE405] Experiments Overview.pptx
Week2/eurecarr_vehicle_sim/: .gitignore  CMakeLists.txt  README.md  setup.py
Week2/eurecarr_vehicle_sim/script/: simulate_dynamics.py
Week2/waypoint_follower/: README.md  package.xml
Week2/waypoint_follower/scripts/: controller.py  wpt_loader.py
Week2/waypoint_follower/wpt_data/: wpt_data_dense.csv
Week3/: README.md
Week3/Assignments/: README.md  data_processor.py  fake_sensor.py  state_processor.py
Week3/Assignments/data_pubsub/: CMakeLists.txt  package.xml
Week3/Assignments/data_pubsub/script/: data_pub.py  data_sub_and_pub.py
Week3/Materials/test_package/: package.xml
Week3/Materials/test_package/launch/: run_pub_sub.launch
Week3/Materials/test_package/script/: test_pub_sub.py
Week4/: README.md
Week4/eurecarr_vehicle_sim/: package.xml
Week4/eurecarr_vehicle_sim/cfg/: dynamics_simulation.rviz
Week4/eurecarr_vehicle_sim/etc/: install_ros_kinetic.sh  install_ros_melodic.sh
Week4/eurecarr_vehicle_sim/include/: placeholder.txt
Week4/eurecarr_vehicle_sim/launch/: simVis.launch
Week4/eurecarr_vehicle_sim/script/: dynamics.py
Week4/waypoint_follower/: CMakeLists.txt
Week5/: README.md
Week5/Materials/eurecarr_vehicle_sim/: README.md
Week5/Materials/waypoint_follower/: README.md
Week6/: README.md
Week6/laser_collision_checker/: CMakeLists.txt  package.xml
Week6/laser_collision_checker/launch/: laser_collision_check.launch
Week6/laser_collision_checker/src/: laser_collision_checker_node.cpp
Week7/: README.md
Week7/Materials/tutorial/: Integrate_controller_with_gazebo_simulator.ipynb
Week7/Materials/waypoint_recorder/: CMakeLists.txt  README.md  package.xml
(+10 files in other folders)
